# skillsync-ai

./: .env.example  .eslintrc.json  .gitignore  IMPLEMENTATION_CHECKLIST.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: batch_worker.yml
ai-service/: config.py  main.py  pyproject.toml  requirements.txt  test_pinecone.py
ai-service/routers/: analytics.py  embed.py  moderate.py  search.py
ai-service/scripts/: migrate_pinecone_cpi.py  test_embedding_service.py  test_gemini.py  test_pinecone.py  test_pinecone_repo.py
ai-service/services/: analytics_service.py  embedding_service.py  explanation_engine.py  moderation_service.py  pinecone_repo.py  ranking_service.py
ai-service/tests/: test_analytics_service.py  test_batch_worker.py  test_embed_router.py  test_embedding_service.py  test_health.py  test_moderation_service.py  test_pinecone_repo.py  test_ranking_service.py  test_search_router.py
backend/: app.js  eslint.config.js  server.js
backend/src/config/: db.js  queue.js  redis.js
backend/src/controllers/: chat.controller.js  connection.controller.js  project.controller.js
backend/src/jobs/: facultyScraperJob.js  jobExpiry.js  moderation.processor.js  reconcileStaleJobs.js
backend/src/middleware/: checkBan.middleware.js  checkBanStatus.js  errorHandler.js  requireRole.js  upload.js  verifyInternalSecret.js  verifyToken.js
docs/: IMPLEMENTATION_CHECKLIST.md  SDD.md  SRS.md  reqs.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
workers/: batch_embed.py
(+184 files in other folders)
