[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "skillsync-ai-service"
version = "1.0.0"
description = "SkillSync AI – Python FastAPI + LangChain microservice"
requires-python = ">=3.11"

# ── Black (code formatter) ────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# ── Ruff (linter – replaces flake8, isort, pyflakes) ─────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes (unused imports, undefined names)
  "I",   # isort (import ordering)
  "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
  "E501", # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["services", "routers", "config"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
